Add navigation bar and style

--- a/index.html
+++ b/index.html
@@ -17,3 +17,32 @@
     <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
+<container>
+
+    <body>
+        <!-- Header -->
+        <header>
+            <a href="index.html">
+                <h1 id="logo">brighton 
+                    <br>
+                    beach <u>yoga</u></h1>
+                <p>yoga by the sea</p>
+            </a>
+            <input type="checkbox" id="nav-toggle" name="nav-toggle">
+            <label for="nav-toggle" class="nav-toggle-label">
+                <i class="fa-solid fa-plus" style="color: #9e8189;"></i>
+            </label>
+            <nav>
+                <ul id="menu">
+                    <li><a href="index.html" class="active">Home</a></li>
+                    <li><a href="classes.html">Classes</a></li>
+                    <li><a href="about.html">About</a></li>
+                </ul>
+            </nav>
+        </header>
+
+        <!-- Font Awesome kit -->
+<script src="https://kit.fontawesome.com/3b20d96fa9.js" crossorigin="anonymous"></script>
+
+</html>
