Add favicon icon

--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
         <!-- Header -->
         <header>
             <a href="index.html">
-                <h1 id="logo">brighton 
+                <h1 id="logo">brighton
                     <br>
-                    beach <u>yoga</u></h1>
+                    beach <u>yoga</u>
+                </h1>
                 <p>yoga by the sea</p>
             </a>
             <input type="checkbox" id="nav-toggle" name="nav-toggle">
@@ -42,7 +43,28 @@
             </nav>
         </header>
 
-        <!-- Font Awesome kit -->
+        <section id="banner-content">
+            <div id="banner-text">
+                <h2>try your first</h2>
+                <h2>class for free</h2>
+                <h4>at brighton beach <u>yoga</u></h4>
+                <a href="classes.html"><button class="button button4">book your class</button></a>
+            </div>
+            <div id="banner-class-text">
+            <h5>choose from our 3 yoga styles</h5>
+            <p>vinyasa flow</p>
+            <p>gentle flow</p>
+            <p>active flow</p>
+            </div>
+        </section>
+
+        </div>
+        
+    </body>
+    <footer>Footer Content</footer>
+</container>
+
+<!-- Font Awesome kit -->
 <script src="https://kit.fontawesome.com/3b20d96fa9.js" crossorigin="anonymous"></script>
 
 </html>
