add contact form on the homepage, and make it responsive for mobile and tablets+

--- a/index.html
+++ b/index.html
@@ -51,14 +51,33 @@
                 <a href="classes.html"><button class="button button4">book your class</button></a>
             </div>
             <div id="banner-class-text">
-            <h5>choose from our 3 yoga styles</h5>
-            <p>vinyasa flow</p>
-            <p>gentle flow</p>
-            <p>active flow</p>
+            <h5>Choose from our 3 yoga styles</h5>
+            <hr>
+            <p>vinyasa flow, gentle flow,</p>
+                <p>active flow</p>
             </div>
         </section>
-
         </div>
+
+        <section id="contact-us">
+            <form id="contact-us-form" method="POST" action="https://formdump.codeinstitute.net">
+                <h2>Get in touch with us</h2>
+                <label for="first-name">First Name</label>
+                <input type="text" name="first_name" id="first-name" class="text-input" required>
+                <br>
+                <label for="last-name">Last Name</label>
+                <input type="text" name="last_name" id="last-name" class="text-input" required>
+                <br>
+                <label for="email-address">Email Address</label>
+                <input type="email" name="email_address" id="email-address" class="text-input" required>
+                <br>
+                <p>Get in touch</p>
+                <textarea class="message" cols="50" rows="4"></textarea>
+                <br>
+                </div>
+                <button type="submit" class="send">Send</button>
+            </form>
+        </section>
         
     </body>
     <footer>Footer Content</footer>
