Start adding main section to the homepage

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             </nav>
         </header>
 
+        <!-- Banner Content Free Class CTA -->
         <section id="banner-content">
             <div id="banner-text">
                 <h2>try your first</h2>
@@ -59,6 +60,17 @@
         </section>
         </div>
 
+    <!-- Main Homepage Content -->
+    <section id="Main-info">
+        <div id="why-us">
+            <h1>Why brighton beach <u>yoga</u>?</h1>
+            <hr>
+            <p>At brighton beach <u>yoga</u>, you'll leave feeling <b>relaxed, energised</b> and <b>refreshed</b>. With the sound of the waves in each and every class, you'll feel calm throughout, as well as growing in strenghth.</p>
+
+        </div>
+    </section>
+
+        <!-- Contact Us Form -->
         <section id="contact-us">
             <form id="contact-us-form" method="POST" action="https://formdump.codeinstitute.net">
                 <h2>Get in touch with us</h2>
