Add images to the homepage

--- a/index.html
+++ b/index.html
@@ -66,7 +66,12 @@
             <h1>Why brighton beach <u>yoga</u>?</h1>
             <hr>
             <p>At brighton beach <u>yoga</u>, you'll leave feeling <b>relaxed, energised</b> and <b>refreshed</b>. With the sound of the waves in each and every class, you'll feel calm throughout, as well as growing in strenghth.</p>
-
+        </div>
+    </section>
+    <section id="studio-images">
+        <div id="images">
+            <img src="assets/images/brighton-beach-yoga2.jpg" alt="Feet on a yoga mat">
+            <img src="assets/images/brighton-beach-yoga3.jpg" alt="Two women at our yoga class">
         </div>
     </section>
 
