Add footer section

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
                 <h2>try your first</h2>
                 <h2>class for free</h2>
                 <h4>at brighton beach <u>yoga</u></h4>
+                <br>
+                <p>use code '<b>brightonbeachyoga'</b></p>
                 <a href="classes.html"><button class="button button4">book your class</button></a>
             </div>
             <div id="banner-class-text">
@@ -99,7 +101,31 @@
         </section>
         
     </body>
-    <footer>Footer Content</footer>
+    <footer>
+        <section id="footer">
+       <div id="footer-logo">
+        <h1 id="logo">brighton
+            <br>
+            beach <u>yoga</u>
+        </h1>
+        <p>yoga by the sea</p>
+        <br>
+        <p>try your first class free</p>
+        <p>use code</p>
+        <p>'<b>brightonbeachyoga</b>'</p>
+        </div>
+       
+       <div id="footer-contact">
+        <hr>
+        <h2>follow us on</h2>
+            <h2>instagram</h2>
+        <a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in a new tab)">
+                    <i class="fa-brands fa-instagram fa-2xl"></i></a>
+                    <a href="index.html"><p>brightonbeachyoga.co.uk</p></a>
+       </div>
+    </section>
+    </footer>
 </container>
 
 <!-- Font Awesome kit -->
