--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         </header>
 
         <!-- Banner Content Free Class CTA -->
+        <main>
         <section id="banner-content">
             <div id="banner-text">
                 <h2>try your first</h2>
@@ -99,7 +100,7 @@
                 <button type="submit" class="send">Send</button>
             </form>
         </section>
-        
+    </main>
     </body>
     <footer>
         <section id="footer">
