Adjusted font sizes for different screen sizes, and corrected alignments

--- a/classes.html
+++ b/classes.html
@@ -51,7 +51,7 @@
                 <h4>at brighton beach <u>yoga</u></h4>
                 <div id="page-cta">
                 <p>book your first class free</p>
-                <a href="classes.html"><button class="button button4">book your class</button></a>
+                <a href="classes.html"><button class="button button4">book now</button></a>
             </div>
             </div>
         </section>
