--- a/index.html
+++ b/index.html
@@ -44,15 +44,16 @@
         </header>
 
         <!-- Banner Content Free Class CTA -->
-        <main>
+        
         <section id="banner-content">
             <div id="banner-text">
                 <h2>try your first</h2>
                 <h2>class for free</h2>
                 <h4>at brighton beach <u>yoga</u></h4>
-                <br>
-                <p>use code '<b>brightonbeachyoga'</b></p>
+                <div id="banner-cta"><p>use code</p>
+                <p>'<b>brightonbeachyoga'</b></p>
                 <a href="classes.html"><button class="button button4">book your class</button></a>
+                </div>
             </div>
             <div id="banner-class-text">
             <h5>Choose from our 3 yoga styles</h5>
@@ -83,7 +84,8 @@
         <!-- Contact Us Form -->
         <section id="contact-us">
             <form id="contact-us-form" method="POST" action="https://formdump.codeinstitute.net">
-                <h2>Get in touch with us</h2>
+                <h2>contact brighton beach <u>yoga</u></h2>
+                <p id="contact-us-title">fill in the form below and we will get back to you as soon as we can.</p>
                 <label for="first-name">First Name</label>
                 <input type="text" name="first_name" id="first-name" class="text-input" required>
                 <br>
@@ -93,14 +95,14 @@
                 <label for="email-address">Email Address</label>
                 <input type="email" name="email_address" id="email-address" class="text-input" required>
                 <br>
-                <p>Get in touch</p>
+                <label for="message">Write your message</label>
                 <textarea class="message" cols="50" rows="4"></textarea>
                 <br>
                 </div>
                 <button type="submit" class="send">Send</button>
             </form>
         </section>
-    </main>
+    
     </body>
     <footer>
         <section id="footer">
