Add 'benefits' section to the homepage

--- a/index.html
+++ b/index.html
@@ -77,6 +77,17 @@
             <hr>
             <p>At brighton beach <u>yoga</u>, you'll leave feeling <b>relaxed, energised</b> and <b>refreshed</b>. With the sound of the waves in each and every class, you'll feel calm throughout, as well as growing in strenghth.</p>
         </div>
+        <div id="why-us-list">
+            <h2>the benefits of brighton beach <u>yoga</u></h2>
+            <ul>
+                <li><i class="fa-solid fa-square-check"></i> build core strength</li>
+                <li><i class="fa-solid fa-square-check"></i> work on mental strength</li>
+                <li><i class="fa-solid fa-square-check"></i> become consistent</li>
+                <li><i class="fa-solid fa-square-check"></i> make friends</li>
+                <li><i class="fa-solid fa-square-check"></i> have fun!</li>
+            </ul>
+            <a href="classes.html"><button class="button button5">book your class</button></a>
+        </div>
     </section>
 
     
