Post testing adjustments, for html and css. Reduced image sizing and tidied up code

--- a/classes.html
+++ b/classes.html
@@ -11,9 +11,9 @@
     <!-- Title -->
     <title>Brighton Beach Yoga</title>
     <!-- Favicon -->
-    <link rel="brighton-beach-yoga" sizes="180x180" href="assets/favicon/brighton beach yoga.jpg">
-    <link rel="icon" type="image/jpg" sizes="32x32" href="assets/favicon/brighton beach yoga.jpg">
-    <link rel="icon" type="image/jpg" sizes="16x16" href="assets/favicon/brighton beach yoga.jpg">
+    <link rel="brighton-beach-yoga" sizes="180x180" href="assets/favicon/brighton-beach-yoga.jpg">
+    <link rel="icon" type="image/jpg" sizes="32x32" href="assets/favicon/brighton-beach-yoga.jpg">
+    <link rel="icon" type="image/jpg" sizes="16x16" href="assets/favicon/brighton-beach-yoga.jpg">
     <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -28,7 +28,6 @@
                     <br>
                     beach <u>yoga</u>
                 </h1>
-                <p>yoga by the sea</p>
             </a>
             <input type="checkbox" id="nav-toggle" name="nav-toggle">
             <label for="nav-toggle" class="nav-toggle-label">
@@ -66,7 +65,6 @@
                 <br>
                 beach <u>yoga</u>
             </h1>
-            <p>yoga by the sea</p>
             <br>
             <p>try your first class free</p>
             <p>use code</p>
