Add section for classes.html, as filler. Need to update copy and messaging

--- a/classes.html
+++ b/classes.html
@@ -18,13 +18,11 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-<container>
-
     <body>
         <!-- Header -->
         <header>
             <a href="index.html">
-                <h1 id="logo">brighton
+                <h1 class= "logo">brighton
                     <br>
                     beach <u>yoga</u>
                 </h1>
@@ -55,8 +53,26 @@
             </div>
         </section>
         </div>
+        <section id="Main-info">
+            <div id="why-us">
+                <h1>Why brighton beach <u>yoga</u>?</h1>
+                <hr>
+                <p>At brighton beach <u>yoga</u>, you'll leave feeling <b>relaxed, energised</b> and <b>refreshed</b>. With the sound of the waves in each and every class, you'll feel calm throughout, as well as growing in strenghth.</p>
+            </div>
+            <div id="why-us-list">
+                <h2>the benefits of brighton beach <u>yoga</u></h2>
+                <ul>
+                    <li><i class="fa-solid fa-square-check"></i> build core strength</li>
+                    <li><i class="fa-solid fa-square-check"></i> work on mental strength</li>
+                    <li><i class="fa-solid fa-square-check"></i> become consistent</li>
+                    <li><i class="fa-solid fa-square-check"></i> make friends</li>
+                    <li><i class="fa-solid fa-square-check"></i> have fun!</li>
+                </ul>
+            </div>
+        </section>
+
+
         </main>
-    </body>
 
         <footer>
             <section id="footer">
@@ -82,7 +98,7 @@
            </div>
         </section>
         </footer>
-    </container>
+    </body>
     
     <!-- Font Awesome kit -->
     <script src="https://kit.fontawesome.com/3b20d96fa9.js" crossorigin="anonymous"></script>
