Added newsletter sign up forms to each page for CTA

--- a/classes.html
+++ b/classes.html
@@ -48,13 +48,13 @@
                 <h4>at brighton beach <u>yoga</u></h4>
                 <div id="page-cta">
                     <p>book your first class free</p>
-                    <a href="classes.html"><button class="button button4">book now</button></a>
+                    <a href="#newsletter" class="button button4"><b>find out how</b></a>
                 </div>
             </div>
         </section>
-        </div>
+
         <section id="Main-pages-info">
-            <div class="classes">
+            <div class="pages-content">
                 <h1>Our classes</h1>
                 <hr>
                 <p>We have a range of class styles at brighton beach <u>yoga</u></p>
@@ -68,29 +68,29 @@
                 <img src="assets/images/brighton-beach-yoga-homepage.jpg"
                     alt="women overlooking the sea in a yoga position">
             </div>
-                <div id="vinyasa">
-                    <h2>Vinyasa flow</h2>
-                    <p>Vinyasa flow yoga is a dynamic style of yoga where poses are seamlessly linked together with
-                        breath,
-                        creating a flowing movement. </p>
-                </div>
+            <div id="vinyasa">
+                <h2>Vinyasa flow</h2>
+                <p>Vinyasa flow yoga is a dynamic style of yoga where poses are seamlessly linked together with
+                    breath,
+                    creating a flowing movement. </p>
+            </div>
             <div class="class-images vinyasa-img">
                 <img src="assets/images/brighton-beach-classes.jpg" alt="women overlooking the sea in a yoga position">
             </div>
-                <div id="gentle">
-                    <h2>Gentle flow</h2>
-                    <p>Gentle flow yoga is a soothing and accessible style that focuses on gentle movements, breath
-                        awareness, and relaxation.</p>
-                </div>
+            <div id="gentle">
+                <h2>Gentle flow</h2>
+                <p>Gentle flow yoga is a soothing and accessible style that focuses on gentle movements, breath
+                    awareness, and relaxation.</p>
+            </div>
             <div class="class-images gentle-img">
                 <img src="assets/images/brighton-beach-classes1.jpg" alt="women holding a yoga position on a yoga mat">
             </div>
-                <div id="active">
-                    <h2>Active flow</h2>
-                    <p>Active flow yoga is an invigorating style that combines fluid and faster movement working with
-                        your
-                        breath, promoting strength, flexibility, and mindfulness.</p>
-                </div>
+            <div id="active">
+                <h2>Active flow</h2>
+                <p>Active flow yoga is an invigorating style that combines fluid and faster movement working with
+                    your
+                    breath, promoting strength, flexibility, and mindfulness.</p>
+            </div>
             <div class="class-images active-img">
                 <img src="assets/images/brighton-beach-classes2.jpg"
                     alt="group of men and women in a yoga class together">
@@ -98,6 +98,30 @@
             </div>
         </section>
 
+        <!-- Contact Us Form -->
+        <section id="newsletter">
+            <form id="newsletter-form" method="POST" action="https://formdump.codeinstitute.net">
+                <h2>brighton beach <u>yoga</u>newsletter</h2>
+                <p id="newsletter-title">Fill in the form below to receive our monthly newsletter.</p>
+                <p>Plus get the booking link to get your first class free.</p>
+                <label for="first-name">First Name</label>
+                <input type="text" name="first_name" id="first-name" class="text-input" required>
+                <br>
+                <label for="last-name">Last Name</label>
+                <input type="text" name="last_name" id="last-name" class="text-input" required>
+                <br>
+                <label for="email-address">Email Address</label>
+                <input type="email" name="email_address" id="email-address" class="text-input" required>
+                <br>
+                <label for="newsletter-signup">Sign me up!</label>
+                <input type="checkbox" name="newsletter-signup" id="newsletter-signup" required>
+                <div id="newsletter-terms">
+                    <br>
+                    <p>When selecting yes to sign up to our newsletter, you'll receive monthly studio updates, including
+                        promotions and new classes. You can opt out at anytime.</p>
+                </div>
+                <button type="submit" class="send">Send</button>
+            </form>
 
     </main>
 
