Testing updates and changes

--- a/classes.html
+++ b/classes.html
@@ -11,7 +11,7 @@
     <!-- Title -->
     <title>Brighton Beach Yoga</title>
     <!-- Favicon -->
-    <link rel="brighton-beach-yoga" sizes="180x180" href="assets/favicon/brighton-beach-yoga.jpg">
+    <link rel="icon" sizes="180x180" href="assets/favicon/brighton-beach-yoga.jpg">
     <link rel="icon" type="image/jpg" sizes="32x32" href="assets/favicon/brighton-beach-yoga.jpg">
     <link rel="icon" type="image/jpg" sizes="16x16" href="assets/favicon/brighton-beach-yoga.jpg">
     <!-- Stylesheet -->
@@ -128,10 +128,10 @@
     <footer>
         <section id="footer">
             <div id="footer-logo">
-                <h1 id="logo">brighton
+                <h2 id="logo">brighton
                     <br>
                     beach <u>yoga</u>
-                </h1>
+                </h2>
                 <br>
                 <p>try your first class free</p>
                 <p>use code</p>
