--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Title -->
     <title>Brighton Beach Yoga</title>
     <!-- Favicon -->
-    <link rel="brighton-beach-yoga" sizes="180x180" href="assets/favicon/brighton-beach-yoga.jpg">
+    <link rel="icon" sizes="180x180" href="assets/favicon/brighton-beach-yoga.jpg">
     <link rel="icon" type="image/jpg" sizes="32x32" href="assets/favicon/brighton-beach-yoga.jpg">
     <link rel="icon" type="image/jpg" sizes="16x16" href="assets/favicon/brighton-beach-yoga.jpg">
     <!-- Stylesheet -->
