Stray start tag corrected <script>

--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
                 <h4>brighton beach <u>yoga</u></h4>
                 <div id="page-cta">
                     <p>receive our newsletter</p>
-                    <a href="#contact-us" class="button button4"><b>sign up</b></a>
+                    <a href="#newsletter" class="button button4"><b>sign up</b></a>
                 </div>
             </div>
         </section>
@@ -130,9 +130,10 @@
             </div>
         </section>
     </footer>
+    <!-- Font Awesome kit -->
+    <script src="https://kit.fontawesome.com/3b20d96fa9.js" crossorigin="anonymous"></script>
 </body>
 
-<!-- Font Awesome kit -->
-<script src="https://kit.fontawesome.com/3b20d96fa9.js" crossorigin="anonymous"></script>
+
 
 </html>
