--- a/index.html
+++ b/index.html
@@ -122,6 +122,14 @@
                 <p>try your first class free</p>
                 <p>use code</p>
                 <p>'<b>brightonbeachyoga</b>'</p>
+                <div id="footer-pages">
+                    <br>
+                    <ul>
+                        <li><a href="index.html">Homepage</a></li>
+                        <li><a href="classes.html">Our Classes</a></li>
+                        <li><a href="about.html">About Us</a></li>
+                    </ul>
+                </div>
             </div>
 
             <div id="footer-contact">
