Removed additional h1 text

--- a/classes.html
+++ b/classes.html
@@ -22,10 +22,10 @@
     <!-- Header -->
     <header>
         <a href="index.html">
-            <h1 class="logo">brighton
+            <h2 class="logo">brighton
                 <br>
                 beach <u>yoga</u>
-            </h1>
+            </h2>
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
         <label for="nav-toggle" class="nav-toggle-label">
@@ -128,7 +128,7 @@
     <footer>
         <section id="footer">
             <div id="footer-logo">
-                <h2 id="logo">brighton
+                <h2>brighton
                     <br>
                     beach <u>yoga</u>
                 </h2>
