--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <!-- Header -->
     <header>
         <a href="index.html">
-            <h1 class="logo">brighton
+            <h2 class="logo">brighton
                 <br>
                 beach <u>yoga</u>
-            </h1>
+            </h2>
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
         <label for="nav-toggle" class="nav-toggle-label">
@@ -61,6 +61,7 @@
     </section>
     <!-- Main Homepage Content -->
     <section id="studio-images">
+        <h2 hidden>Studio Images</h2>
         <div id="images">
             <img src="assets/images/brighton-beach-yoga3.jpg" alt="Two women at our yoga class">
         </div>
@@ -114,10 +115,10 @@
     <footer>
         <section id="footer">
             <div id="footer-logo">
-                <h1 class="logo">brighton
+                <h2>brighton
                     <br>
                     beach <u>yoga</u>
-                </h1>
+                </h2>
                 <br>
                 <p>try your first class free</p>
                 <p>use code</p>
