--- a/about.html
+++ b/about.html
@@ -55,10 +55,8 @@
 
         <section id="Main-pages-info">
             <div class="pages-content">
-                <h1>why brighton beach <u>yoga</u>?</h1>
+                <h1>welcome to brighton beach <u>yoga</u></h1>
                 <hr>
-                <p>Welcome to brighton beach <u>yoga</u>.</p>
-                <br>
                 <p>Born from a deep love for the sea and a desire to create inner strength, our founders,
                     lifelong residents of Brighton, embarked on a mission to blend the beauty of coastal living with the
                     practice of yoga.</p>
