Image resize for lighthouse testing

--- a/about.html
+++ b/about.html
@@ -33,13 +33,12 @@
         </label>
         <nav>
             <ul id="menu">
-                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="classes.html">Classes</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="about.html" class="active">About</a></li>
             </ul>
         </nav>
     </header>
-
     <!-- Banner Content Sub Pages / Page title  -->
     <main id="pages-main">
         <section id="page-banner-content">
@@ -52,7 +51,6 @@
                 </div>
             </div>
         </section>
-
         <section id="Main-pages-info">
             <div class="pages-content">
                 <h1>welcome to brighton beach <u>yoga</u></h1>
@@ -71,7 +69,7 @@
                     welcomes you to experience the transformative power of yoga by the sea.</p>
             </div>
             <div id="founder-img">
-                <img src="assets/images/brighton-beach-founders.jpg" alt="two women walking away overlooking water">
+                <img src="assets/images/brighton-beach-founders.jpeg" alt="two women walking away overlooking water">
             </div>
             <div id="newsletter-jump"></div>
         </section>
@@ -99,9 +97,7 @@
                 </div>
                 <button type="submit" class="send">Send</button>
             </form>
-
     </main>
-
     <footer>
         <section id="footer">
             <div id="footer-logo">
@@ -122,7 +118,6 @@
                     </ul>
                 </div>
             </div>
-
             <div id="footer-contact">
                 <hr>
                 <h2>follow us on</h2>
@@ -139,5 +134,4 @@
     <!-- Font Awesome kit -->
     <script src="https://kit.fontawesome.com/0da7b60e46.js" crossorigin="anonymous"></script>
 </body>
-
 </html>
