--- a/classes.html
+++ b/classes.html
@@ -33,13 +33,12 @@
         </label>
         <nav>
             <ul id="menu">
-                <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="classes.html">Classes</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="classes.html" class="active">Classes</a></li>
                 <li><a href="about.html">About</a></li>
             </ul>
         </nav>
     </header>
-
     <!-- Banner Content Sub Pages / Page title  -->
     <main id="pages-main">
         <section id="page-banner-content">
@@ -52,7 +51,6 @@
                 </div>
             </div>
         </section>
-
         <section id="Main-pages-info">
             <div class="pages-content">
                 <h1>Our classes</h1>
@@ -65,7 +63,7 @@
                     of the sea, enhancing the experience of connection and relaxation.</p>
             </div>
             <div class="class-images class-img">
-                <img src="assets/images/brighton-beach-yoga-homepage.jpg"
+                <img src="assets/images/brighton-beach-yoga-homepage.jpeg"
                     alt="women overlooking the sea in a yoga position">
             </div>
             <div id="vinyasa">
@@ -75,7 +73,7 @@
                     creating a flowing movement. </p>
             </div>
             <div class="class-images vinyasa-img">
-                <img src="assets/images/brighton-beach-classes.jpg" alt="women overlooking the sea in a yoga position">
+                <img src="assets/images/brighton-beach-classes.jpeg" alt="women overlooking the sea in a yoga position">
             </div>
             <div id="gentle">
                 <h2>Gentle flow</h2>
@@ -83,7 +81,7 @@
                     awareness, and relaxation.</p>
             </div>
             <div class="class-images gentle-img">
-                <img src="assets/images/brighton-beach-classes1.jpg" alt="women holding a yoga position on a yoga mat">
+                <img src="assets/images/brighton-beach-classes1.jpeg" alt="women holding a yoga position on a yoga mat">
             </div>
             <div id="active">
                 <h2>Active flow</h2>
@@ -92,12 +90,11 @@
                     breath, promoting strength, flexibility, and mindfulness.</p>
             </div>
             <div class="class-images active-img">
-                <img src="assets/images/brighton-beach-classes2.jpg"
+                <img src="assets/images/brighton-beach-classes2.jpeg"
                     alt="group of men and women in a yoga class together">
             </div>
             </div>
         </section>
-
         <!-- Contact Us Form -->
         <section id="newsletter">
             <form id="newsletter-form" method="POST" action="https://formdump.codeinstitute.net">
@@ -122,9 +119,7 @@
                 </div>
                 <button type="submit" class="send">Send</button>
             </form>
-
     </main>
-
     <footer>
         <section id="footer">
             <div id="footer-logo">
@@ -145,7 +140,6 @@
                     </ul>
                 </div>
             </div>
-
             <div id="footer-contact">
                 <hr>
                 <h2>follow us on</h2>
