--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,7 +16,6 @@
     <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
-
 <body>
     <!-- Header -->
     <header>
@@ -40,7 +38,6 @@
         </nav>
     </header>
     <!-- Banner Content Free Class CTA -->
-
     <section id="banner-content">
         <div id="banner-text">
             <h2>try your first</h2>
@@ -63,10 +60,9 @@
     <section id="studio-images">
         <h2 hidden>Studio Images</h2>
         <div id="images">
-            <img src="assets/images/brighton-beach-yoga3.jpg" alt="Two women at our yoga class">
+            <img src="assets/images/brighton-beach-yoga3.jpeg" alt="Two women at our yoga class">
         </div>
     </section>
-
     <section id="Main-info">
         <div id="why-us">
             <h1>Why brighton beach <u>yoga</u>?</h1>
@@ -132,7 +128,6 @@
                     </ul>
                 </div>
             </div>
-
             <div id="footer-contact">
                 <hr>
                 <h2>follow us on</h2>
@@ -149,7 +144,5 @@
     
     <!-- Font Awesome kit -->
 <script src="https://kit.fontawesome.com/0da7b60e46.js" crossorigin="anonymous"></script>
-
 </body>
-
 </html>
