--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <section id="studio-images">
         <h2 hidden>Studio Images</h2>
         <div id="images">
-            <img src="assets/images/brighton-beach-yoga3.jpeg" alt="Two women at our yoga class">
+            <img src="assets/images/brighton-beach-yoga3.jpg" alt="Two women at our yoga class">
         </div>
     </section>
     <section id="Main-info">
