Add reference notes to index.html

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </head>
 <body>
     <!-- Header -->
+    <!-- Nav Inspiration taken from previous Love Running Project -->
     <header>
         <a href="index.html">
             <h2 class="logo">brighton
@@ -38,6 +39,7 @@
         </nav>
     </header>
     <!-- Banner Content Free Class CTA -->
+    <!-- Button element taken from W3Schools -->
     <section id="banner-content">
         <div id="banner-text">
             <h2>try your first</h2>
